--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,12 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+ddddddddddddddddddddddddddd
+dd
+ddd
+dd
+dd
+ddd
+d
+
+dd
